# sentinelcare-mvp

./: .env.example  .gitignore  Dockerfile  Makefile  Project Sentinel Care Founder Blueprint1.docx  README.md  netlify.toml  project_sentinel_care_founder_blueprint1.md  pyproject.toml
.github/workflows/: ci.yml  deploy-api-image.yml  deploy-india-surveillance-api-vm.yml  deploy-india-surveillance-netlify.yml  deploy-netlify.yml  india-surveillance-ci.yml  india-surveillance-supabase-db.yml  supabase-db.yml
docs/: app_overhaul_framework_mapping.md  cicd.md  deployment_netlify_supabase.md  ide_to_prod_automation.md  multi_agent_architecture.md  roadmap.md  vision.md  workflows.md
docs/manuscripts/: _blueprint_extracted_from_docx.md  manuscript_01_concept_and_protocol.md  manuscript_02_architecture_and_implementation.md
docs/research/: guideline_alignment_matrix.md  literature_landscape.md  stepwise_build_plan.md  theoretical_framework.md
frontend/india-surveillance/: .env.example  index.html  netlify.toml  package-lock.json  package.json
frontend/web/: index.html  package-lock.json  package.json  tsconfig.json
projects/india_patient_safety_surveillance/: README.md  render.yaml
scripts/: bootstrap_github_automation.ps1  execute_supabase_sql.py
src/indiasurveillance/: ai.py  api.py  auth.py  cli.py  contracts.py  demo_data.py  persistence.py  security.py  service.py
src/sentinelcare/: __init__.py  agents.py  api.py  cli.py  contracts.py  demo_data.py  engines.py  persistence.py  pipeline.py  router.py
supabase/: config.toml
tests/: test_e2e_pipeline.py
(+219 files in other folders)
