[project]
name = "sentinelcare-mvp"
version = "0.1.0"
description = "Project SentinelCare MVP multi-agent safety pipeline"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.30.0",
  "pydantic>=2.8.0",
  "supabase>=2.15.1",
  "PyJWT>=2.9.0",
  "requests>=2.32.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
]

[project.scripts]
sentinelcare-demo = "sentinelcare.cli:main"
sentinelcare-api = "sentinelcare.api:run"
india-surveillance-demo = "indiasurveillance.cli:main"
india-surveillance-api = "indiasurveillance.api:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
